Fix small layout problems.

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,6 @@
 .Header {
   display: flex;
-  height: 8%;
+  height: 5%;
   align-items: center;
   padding: 0 0 0 10px;
 
