--- a/src/components/StoryList/style.css
+++ b/src/components/StoryList/style.css
@@ -1,7 +1,10 @@
 .Stories {
+  height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+
+  overflow-y: auto;
 
   border: 1px solid salmon;
   list-style: none;
