--- a/src/containers/App/style.css
+++ b/src/containers/App/style.css
@@ -24,7 +24,7 @@ html, body {
 }
 
 .AppNavigation {
-  height: 92%;
+  height: 94%;
   width: 100%;
 
   display: flex;
