--- a/src/containers/Stories/style.css
+++ b/src/containers/Stories/style.css
@@ -1,4 +1,3 @@
 .Story {
   flex: 4 1;
-  overflow: auto;
 }
